--- a/men_athletix.html
+++ b/men_athletix.html
@@ -234,63 +234,63 @@
         <h1>Mens Collection</h1>
         <div class="product-grid">
             <div class="product-card">
-                <a href="product1.html">
+                <a href="men_product1.html">
                     <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/44429dd8-0c30-4a38-8aef-03183c273413/AS+M+NK+DF+STRK%2B+SS+TOP.png" alt="Running Shoes">
                     <h3>Nike Perform Tee</h3>
                 </a>
                 <p>₹6,499</p>
             </div>
             <div class="product-card">
-                <a href="product2.html">
+                <a href="men_product2.html">
                     <img src="product2.jpg" alt="Training Shoes">
                     <h3>Real Madrid 99/00 Home Jersey</h3>
                 </a>
                 <p>₹5,299</p>
             </div>
             <div class="product-card">
-                <a href="product3.html">
+                <a href="men_product3.html">
                     <img src="product3.jpg" alt="Casual Shoes">
                     <h3>Manchester United UBP Tee</h3>
                 </a>
                 <p>₹3,999</p>
             </div>
             <div class="product-card">
-                <a href="product4.html">
+                <a href="men_product4.html">
                     <img src="product4.jpg" alt="High Tops">
                     <h3>High-Top Sneakers</h3>
                 </a>
                 <p>₹4,799</p>
             </div>
             <div class="product-card">
-                <a href="product5.html">
+                <a href="men_product5.html">
                     <img src="product5.jpg" alt="Sliders">
                     <h3>Brain Dead Knot Polo Shirt</h3>
                 </a>
                 <p>₹1,499</p>
             </div>
             <div class="product-card">
-                <a href="product6.html">
+                <a href="men_product6.html">
                     <img src="product6.jpg" alt="Cricket Shoes">
                     <h3>Nike Club Fleece</h3>
                 </a>
                 <p>₹5,999</p>
             </div>
             <div class="product-card">
-                <a href="product7.html">
+                <a href="men_product7.html">
                     <img src="product7.jpg" alt="Gym Trainers">
                     <h3>Gym Trainers</h3>
                 </a>
                 <p>₹4,299</p>
             </div>
             <div class="product-card">
-                <a href="product8.html">
+                <a href="men_product8.html">
                     <img src="product8.jpg" alt="Basketball Shoes">
                     <h3>Basketball Shoes</h3>
                 </a>
                 <p>₹6,799</p>
             </div>
             <div class="product-card">
-                <a href="product9.html">
+                <a href="men_product9.html">
                     <img src="product9.jpg" alt="Formal Sneakers">
                     <h3>Jordan Brooklyn Fleece</h3>
                 </a>
