--- a/homepage.html
+++ b/homepage.html
@@ -230,9 +230,9 @@
             <img src="fav.jpeg" alt="Athletix">
         </div>
         <div class="nav-menu">
-            <a href="#">Men</a>
-            <a href="#">Women</a>
-            <a href="#">Kids</a>
+            <a href="men_athletix.html">Men</a>
+            <a href="women_athletix.html">Women</a>
+            <a href="kids_athletix.html">Kids</a>
             <a href="#">Shoes</a>
         </div>
         <div class="search-bar">
