--- a/women_athletix.html
+++ b/women_athletix.html
@@ -234,63 +234,63 @@
         <h1>Women's Collection</h1>
         <div class="product-grid">
             <div class="product-card">
-                <a href="product1.html">
+                <a href="women_product1.html">
                     <img src="product1.jpg" alt="Nike Air Force 1'07 LX">
                     <h3>Nike Air Force 1'07 LX</h3>
                 </a>
                 <p>₹6,499</p>
             </div>
             <div class="product-card">
-                <a href="product2.html">
+                <a href="women_product2.html">
                     <img src="product2.jpg" alt="Nike Pegasus Premium">
                     <h3>Nike Pegasus Premium</h3>
                 </a>
                 <p>₹5,299</p>
             </div>
             <div class="product-card">
-                <a href="product3.html">
+                <a href="women_product3.html">
                     <img src="product3.jpg" alt="Women's Dri-FIT Woven Trousers">
                     <h3>Women's Dri-FIT Woven Trousers</h3>
                 </a>
                 <p>₹3,999</p>
             </div>
             <div class="product-card">
-                <a href="product4.html">
+                <a href="women_product4.html">
                     <img src="product4.jpg" alt="Women's Slim Tank Dress">
                     <h3>Women's Slim Tank Dress</h3>
                 </a>
                 <p>₹4,799</p>
             </div>
             <div class="product-card">
-                <a href="product5.html">
+                <a href="women_product5.html">
                     <img src="product5.jpg" alt="Women's Short-Sleeve T-Shirt">
                     <h3>Women's Short-Sleeve T-Shirt</h3>
                 </a>
                 <p>₹1,499</p>
             </div>
             <div class="product-card">
-                <a href="product6.html">
+                <a href="women_product6.html">
                     <img src="product6.jpg" alt="Women's Skirt">
                     <h3>Women's Skirt</h3>
                 </a>
                 <p>₹5,999</p>
             </div>
             <div class="product-card">
-                <a href="product7.html">
+                <a href="women_product7.html">
                     <img src="product7.jpg" alt="Women's Mid-Rise Shorts">
                     <h3>Women's Mid-Rise Shorts</h3>
                 </a>
                 <p>₹4,299</p>
             </div>
             <div class="product-card">
-                <a href="product8.html">
+                <a href="women_product8.html">
                     <img src="product8.jpg" alt="Women's Sleeveless Graphic T-Shirt">
                     <h3>Women's Sleeveless Graphic T-Shirt</h3>
                 </a>
                 <p>₹6,799</p>
             </div>
             <div class="product-card">
-                <a href="product9.html">
+                <a href="women_product9.html">
                     <img src="product9.jpg" alt="Women's Dri-FIT Packable Running Jacket">
                     <h3>Women's Dri-FIT Packable Running Jacket</h3>
                 </a>
