--- a/homepage.html
+++ b/homepage.html
@@ -113,40 +113,12 @@
             font-weight: bold;
         }
 
-        .search-bar {
-            display: flex;
-            align-items: center;
-            border: 1px solid #ccc;
-            padding: 5px;
-            border-radius: 5px;
-        }
-
-        .search-bar input {
-            border: none;
-            outline: none;
-        }
-
-
-
         .icons {
             display: flex;
             align-items: center;
             gap: 15px;
         }
 
-        .notification {
-            position: relative;
-        }
-
-        .notification-badge {
-            position: absolute;
-            top: -5px;
-            right: -5px;
-            background-color: yellow;
-            border-radius: 50%;
-            padding: 2px 5px;
-            font-size: 12px;
-        }
 
         footer {
             background-color: #000;
@@ -223,28 +195,20 @@
     <div class="header">
         <div class="help-signup">
             <a href="#">Help</a>
-            <a href="#">Orders and Returns</a>
+            <a href="#">Orders</a>
             <a href="#">Log In</a>
         </div>
         <div class="logo">
             <img src="fav.jpeg" alt="Athletix">
         </div>
         <div class="nav-menu">
-            <a href="men_athletix.html">Men</a>
-            <a href="women_athletix.html">Women</a>
-            <a href="kids_athletix.html">Kids</a>
+            <a href="#">Men</a>
+            <a href="#">Women</a>
+            <a href="#">Kids</a>
             <a href="#">Shoes</a>
         </div>
-        <div class="search-bar">
-            <input type="text" placeholder="Search">
-            <img src="search-icon.png" alt="Search">
-        </div>
+
         <div class="icons">
-            <div class="notification">
-                <img src="user-icon.png" alt="User Icon">
-                <div class="notification-badge">1</div>
-            </div>
-            <img src="favorites-icon.png" alt="Favorites">
             <img src="cart-icon.png" alt="Cart">
         </div>
     </div>
@@ -321,9 +285,6 @@
                     <li>Footwear</li>
                     <li>Clothing</li>
                     <li>Accessories</li>
-                    <li>Outlet-Sale</li>
-                    <li>New Arrivals</li>
-                    <li>Flat 50% Off!</li>
                 </ul>
             </div>
             <div class="footer-column">
@@ -354,7 +315,6 @@
                     <li>Customer Service</li>
                     <li>Returns & Exchanges</li>
                     <li>Shipping</li>
-                    <li>Order Tracker</li>
                 </ul>
             </div>
             <div class="footer-column">
@@ -363,13 +323,12 @@
                     <li>About Us</li>
                     <li>Athletix Apps</li>
                     <li>Entity Details</li>
-                    <li>Press</li>
-                    <li>Careers</li>
                 </ul>
             </div>
             <div class="footer-column social">
                 <h3>FOLLOW US</h3>
                 <p>📷 Instagram</p>
+                <p>🐦‍⬛ X</p>
             </div>
         </div>
         <div class="footer-bottom">
