--- a/women_athletix.html
+++ b/women_athletix.html
@@ -242,8 +242,8 @@
             </div>
             <div class="product-card">
                 <a href="women_product2.html">
-                    <img src="product2.jpg" alt="Go to kitchen">
-                    <h3>Go to kitchen</h3>
+                    <img src="product2.jpg" alt="Nike Pegasus Premium">
+                    <h3>Nike Pegasus Premium</h3>
                 </a>
                 <p>₹5,299</p>
             </div>
