--- a/shoes_athletix.html
+++ b/shoes_athletix.html
@@ -234,63 +234,63 @@
         <h1>Shoes Collection</h1>
         <div class="product-grid">
             <div class="product-card">
-                <a href="product1.html">
+                <a href="shoes_product1.html">
                     <img src="product1.jpg" alt="Running Shoes">
                     <h3>Men's Running Shoes</h3>
                 </a>
                 <p>₹6,499</p>
             </div>
             <div class="product-card">
-                <a href="product2.html">
+                <a href="shoes_product2.html">
                     <img src="product2.jpg" alt="Training Shoes">
                     <h3>Training Sneakers</h3>
                 </a>
                 <p>₹5,299</p>
             </div>
             <div class="product-card">
-                <a href="product3.html">
+                <a href="shoes_product3.html">
                     <img src="product3.jpg" alt="Casual Shoes">
                     <h3>Classic Casuals</h3>
                 </a>
                 <p>₹3,999</p>
             </div>
             <div class="product-card">
-                <a href="product4.html">
+                <a href="shoes_product4.html">
                     <img src="product4.jpg" alt="High Tops">
                     <h3>High-Top Sneakers</h3>
                 </a>
                 <p>₹4,799</p>
             </div>
             <div class="product-card">
-                <a href="product5.html">
+                <a href="shoes_product5.html">
                     <img src="product5.jpg" alt="Sliders">
                     <h3>Comfort Sliders</h3>
                 </a>
                 <p>₹1,499</p>
             </div>
             <div class="product-card">
-                <a href="product6.html">
+                <a href="shoes_product6.html">
                     <img src="product6.jpg" alt="Cricket Shoes">
                     <h3>Cricket Spikes</h3>
                 </a>
                 <p>₹5,999</p>
             </div>
             <div class="product-card">
-                <a href="product7.html">
+                <a href="shoes_product7.html">
                     <img src="product7.jpg" alt="Gym Trainers">
                     <h3>Gym Trainers</h3>
                 </a>
                 <p>₹4,299</p>
             </div>
             <div class="product-card">
-                <a href="product8.html">
+                <a href="shoes_product8.html">
                     <img src="product8.jpg" alt="Basketball Shoes">
                     <h3>Basketball Shoes</h3>
                 </a>
                 <p>₹6,799</p>
             </div>
             <div class="product-card">
-                <a href="product9.html">
+                <a href="shoes_product9.html">
                     <img src="product9.jpg" alt="Formal Sneakers">
                     <h3>Urban Formal Sneakers</h3>
                 </a>
