--- a/kids_athletix.html
+++ b/kids_athletix.html
@@ -234,63 +234,63 @@
         <h1>Kids Collection</h1>
         <div class="product-grid">
             <div class="product-card">
-                <a href="product1.html">
+                <a href="kids_product1.html">
                     <img src="product1.jpg" alt="Adidas Lilo & Stitch T-Shirt">
                     <h3>Adidas Lilo & Stitch T-Shirt</h3>
                 </a>
                 <p>₹3,599</p>
             </div>
             <div class="product-card">
-                <a href="product2.html">
+                <a href="kids_product2.html">
                     <img src="product2.jpg" alt="Essentials Allover Prnt Jogger Set">
                     <h3>Essentials Allover Prnt Jogger Set</h3>
                 </a>
                 <p>₹1,299</p>
             </div>
             <div class="product-card">
-                <a href="product3.html">
+                <a href="kids_product3.html">
                     <img src="product3.jpg" alt="Disney Mickey Mouse Tee Set">
                     <h3>Disney Mickey Mouse Tee Set</h3>
                 </a>
                 <p>₹3,999</p>
             </div>
             <div class="product-card">
-                <a href="product4.html">
+                <a href="kids_product4.html">
                     <img src="product4.jpg" alt="Lil Nigga Joggers Set">
                     <h3>Lil Nigga Joggers Set</h3>
                 </a>
                 <p>₹4,799</p>
             </div>
             <div class="product-card">
-                <a href="product5.html">
+                <a href="kids_product5.html">
                     <img src="product5.jpg" alt="Marvel Spider-Man T-Shirt">
                     <h3>Marvel Spider-Man T-Shirt</h3>
                 </a>
                 <p>₹1,499</p>
             </div>
             <div class="product-card">
-                <a href="product6.html">
+                <a href="kids_product6.html">
                     <img src="product6.jpg" alt="Lil MethHead Shoes">
                     <h3>Lil MethHead Shoes</h3>
                 </a>
                 <p>₹5,999</p>
             </div>
             <div class="product-card">
-                <a href="product7.html">
+                <a href="kids_product7.html">
                     <img src="product7.jpg" alt="Adidas Child Predators Shoes">
                     <h3>Adidas Child Predators Shoes</h3>
                 </a>
                 <p>₹4,299</p>
             </div>
             <div class="product-card">
-                <a href="product8.html">
+                <a href="kids_product8.html">
                     <img src="product8.jpg" alt="Adidas Samba OG Shoes Kids">
                     <h3>Adidas Samba OG Shoes Kids</h3>
                 </a>
                 <p>₹6,799</p>
             </div>
             <div class="product-card">
-                <a href="product9.html">
+                <a href="kids_product9.html">
                     <img src="product9.jpg" alt="F50 League Firm/Multi-Ground Cleats Kids">
                     <h3>F50 League Firm/Multi-Ground Cleats Kids</h3>
                 </a>
