--- a/football_athletix.html
+++ b/football_athletix.html
@@ -231,7 +231,7 @@
     </div>
 
     <div class="main-content">
-        <h1>Make More Boundries with Athletix</h1>
+        <h1>More Goals with Athletix</h1>
         <div class="product-grid">
             <div class="product-card">
                 <a href="product1.html">
